@@ -1,68 +1,98 @@
 package com.eventmate.auth.security;
 
-import com.eventmate.auth.model.Role;
+import io.jsonwebtoken.Claims;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.util.StringUtils;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 @Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
     private static final Logger log = LoggerFactory.getLogger(JwtAuthenticationFilter.class);
 
-    @Autowired
-    private JwtUtil jwtUtil;
+    // Internal headers
+    private static final String INTERNAL_TOKEN_HEADER = "X-Internal-Token";
+    private static final String EXPECTED_INTERNAL_TOKEN = "eventmate-secret";
+    private static final String USER_ID_HEADER = "X-User-Id";
+    private static final String ROLE_HEADER = "X-User-Role";
 
-    @Autowired
-    private CustomUserDetailsService customUserDetailsService;
+    // JWT header
+    private static final String AUTHORIZATION_HEADER = "Authorization";
+
+    private final JwtUtil jwtUtil;
+
+    public JwtAuthenticationFilter(JwtUtil jwtUtil) {
+        this.jwtUtil = jwtUtil;
+    }
 
     @Override
     protected void doFilterInternal(HttpServletRequest request,
-                                   HttpServletResponse response,
-                                   FilterChain filterChain) throws ServletException, IOException {
+                                    HttpServletResponse response,
+                                    FilterChain filterChain) throws ServletException, IOException {
+
         try {
-            String jwt = getJwtFromRequest(request);
+            String internalToken = request.getHeader(INTERNAL_TOKEN_HEADER);
+            if (EXPECTED_INTERNAL_TOKEN.equals(internalToken)) {
+                String userId = request.getHeader(USER_ID_HEADER);
+                String role = request.getHeader(ROLE_HEADER);
 
-            if (StringUtils.hasText(jwt) && jwtUtil.validateToken(jwt)) {
-                String email = jwtUtil.getEmailFromToken(jwt);
-                Role role = jwtUtil.getRoleFromToken(jwt);
-                Collection<GrantedAuthority> authorities = Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + role.name()));
-                UsernamePasswordAuthenticationToken authentication =
-                        new UsernamePasswordAuthenticationToken(email, null, authorities);
-                authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
+                if (userId != null && role != null) {
+                    UsernamePasswordAuthenticationToken authentication =
+                            new UsernamePasswordAuthenticationToken(
+                                    userId,
+                                    null,
+                                    List.of(new SimpleGrantedAuthority("ROLE_" + role))
+                            );
 
-                SecurityContextHolder.getContext().setAuthentication(authentication);
-                log.debug("Set authentication for user: {} with role: {}", email, role);
-                log.info("Authorities set in SecurityContext: {}", authorities);
+                    SecurityContextHolder.getContext().setAuthentication(authentication);
+                    log.debug("Internal auth set for userId: {} with role: {}", userId, role);
+
+                    filterChain.doFilter(request, response);
+                    return;
+                }
             }
+
+            // EXTERNAL CALL (JWT)
+            String authHeader = request.getHeader(AUTHORIZATION_HEADER);
+
+            if (StringUtils.hasText(authHeader) && authHeader.startsWith("Bearer ")) {
+
+                String token = authHeader.substring(7);
+
+                if (jwtUtil.validateToken(token)) {
+                    Claims claims = jwtUtil.extractAllClaims(token);
+
+                    String userId = claims.getSubject();
+                    String role = claims.get("role", String.class);
+
+                    UsernamePasswordAuthenticationToken authentication =
+                            new UsernamePasswordAuthenticationToken(
+                                    userId,
+                                    null,
+                                    List.of(new SimpleGrantedAuthority("ROLE_" + role))
+                            );
+
+                    SecurityContextHolder.getContext().setAuthentication(authentication);
+                    log.debug("JWT auth set for userId: {} with role: {}", userId, role);
+                }
+            }
+
         } catch (Exception ex) {
-            log.error("Could not set user authentication in security context", ex);
+            log.error("Authentication failed", ex);
         }
 
         filterChain.doFilter(request, response);
-    }
-
-    private String getJwtFromRequest(HttpServletRequest request) {
-        String bearerToken = request.getHeader("Authorization");
-        if (StringUtils.hasText(bearerToken) && bearerToken.startsWith("Bearer ")) {
-            return bearerToken.substring(7);
-        }
-        return null;
     }
 }
